Add portfolio contents

--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="./AAKASH.jpeg" alt="Aakash photo" style="height: 85px; width: 70px;">
+	<h1>Aakash Murali</h1>
+	<span>Linkedin Profile:</span> <a href="https://www.linkedin.com/in/aakashmurali">Aakash Murali</a>
+	<section id="skills">
+		<h2>Skills</h2>
+		<ul>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>Javascript</li>
+			<li>Java</li>
+		</ul>
+	</section>
+	<section id="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li>My Portfolio page</li>
+			<li>Detailed study of inventory control</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
