--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="./AAKASH.jpeg" alt="Aakash photo" style="height: 85px; width: 70px;">
+	<img src="./images/AAKASH.jpeg" alt="Aakash photo" style="height: 85px; width: 70px;">
 	<h1>Aakash Murali</h1>
 	<span>Linkedin Profile:</span> <a href="https://www.linkedin.com/in/aakashmurali">Aakash Murali</a>
 	<section id="skills">
